--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -20,13 +20,9 @@ jobs:
         shell: bash
 
       # Logs in with your Azure credentials
-      - name: Azure Login
-        uses: azure/login@v2
+      - uses: azure/login@v1
         with:
-          auth-type: SERVICE_PRINCIPAL
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # Builds and pushes an image up to your Azure Container Registry
       - name: Build and push image to ACR
@@ -49,13 +45,9 @@ jobs:
         shell: bash
 
       # Logs in with your Azure credentials
-      - name: Azure Login
-        uses: azure/login@v2
+      - uses: azure/login@v1
         with:
-          auth-type: SERVICE_PRINCIPAL
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
 
       # Use kubelogin to configure your kubeconfig for Azure auth
