--- a/test_app/Dockerfile
+++ b/test_app/Dockerfile
@@ -5,11 +5,11 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Copy requirements and install dependencies
-COPY requirements.txt .
+COPY ../requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the application code
-COPY . .
+COPY .. .
 
 # Expose port the app runs on
 EXPOSE 5000
